--- a/didMobile/www/index.html
+++ b/didMobile/www/index.html
@@ -23,6 +23,7 @@
     <script src="didApp/dayProgress/dayProgress.controller.js"></script>
     <script src="didApp/projectProgress/projectProgress.controller.js"></script>
     <script src="didApp/weekProgress/weekProgress.controller.js"></script>
+    <script src="didApp/settings/setting.controller.js"></script>
     <script src="didApp/services/service.js"></script>
 
     <!-- your app's js -->
