--- a/didMobile/www/didApp/tabs.html
+++ b/didMobile/www/didApp/tabs.html
@@ -2,13 +2,13 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- weekProgress Tab -->
-  <ion-tab title="Week" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/weekProgress">
+  <ion-tab title="Home" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/weekProgress">
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/projectProgress">
-    <ion-nav-view name="tab-setting"></ion-nav-view>
+  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
 
 
