added login function. logout. mockups

--- a/didMobile/www/didApp/login/login.html
+++ b/didMobile/www/didApp/login/login.html
@@ -5,13 +5,13 @@
       </div>
       <div class='list list-inset'>
               <label class="item item-input">
-                  <input type="text" placeholder="Username" ng-model='username'>
+                  <input type="text" placeholder="Username" ng-model='user.username'>
               </label>
               <label class="item item-input">
-                  <input type="password" placeholder="Password" ng-model='password'>
+                  <input type="password" placeholder="Password" ng-model='user.password'>
               </label>
               <br>
-              <button class="button button-block button-stable" ui-sref="tab.weekProgress({currentWeekNumber : '{{currentWeekNumber}}',currentYearNumber: '{{currentYearNumber}}' })">
+              <button class="button button-block button-stable" ng-click='login(user)'>
               Login
             </button>
           <p></p>
