--- a/didMobile/www/didApp/settings/settings.html
+++ b/didMobile/www/didApp/settings/settings.html
@@ -3,7 +3,7 @@
     <div class="list">
       <div class="item item-button-right">
         Logout
-        <button class="button button-positive" ui-sref='login'>
+        <button class="button button-positive" ng-click='logout()'>
           <i class="icon ion-log-out"></i>
         </button>
       </div>
