--- a/didMobile/www/index.html
+++ b/didMobile/www/index.html
@@ -20,11 +20,13 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="didApp/login/login.controller.js"></script>
+    <script src="didApp/login/login.service.js"></script>
     <script src="didApp/dayProgress/dayProgress.controller.js"></script>
     <script src="didApp/projectProgress/projectProgress.controller.js"></script>
     <script src="didApp/weekProgress/weekProgress.controller.js"></script>
     <script src="didApp/settings/setting.controller.js"></script>
     <script src="didApp/services/service.js"></script>
+
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
