--- a/didMobile/www/didApp/tabs.html
+++ b/didMobile/www/didApp/tabs.html
@@ -3,11 +3,11 @@
 
   <!-- weekProgress Tab -->
   <ion-tab title="Home" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/weekProgress">
-    <ion-nav-view name="tab-home"></ion-nav-view>
+    <ion-nav-view nav-clear name="tab-home"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
+  <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
     <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
 
