--- a/didMobile/www/index.html
+++ b/didMobile/www/index.html
@@ -22,11 +22,11 @@
     <script src="didApp/login/login.controller.js"></script>
     <script src="didApp/login/login.service.js"></script>
     <script src="didApp/dayProgress/dayProgress.controller.js"></script>
-    <script src="didApp/dayProgress/dayProgress.filter.js"></script>
     <script src="didApp/projectProgress/projectProgress.controller.js"></script>
     <script src="didApp/weekProgress/weekProgress.controller.js"></script>
     <script src="didApp/settings/setting.controller.js"></script>
     <script src="didApp/services/service.js"></script>
+    <script src="didApp/services/dataStore.service.js"></script>
 
 
     <!-- your app's js -->
