--- a/didMobile/www/didApp/projectProgress/projectProgress.html
+++ b/didMobile/www/didApp/projectProgress/projectProgress.html
@@ -4,11 +4,11 @@
         <br>
         <label class="item item-input">
           <span class="input-label">Start Time</span>
-        <input type="text" ng-model="project.startTime">
+        <input type="text" ng-model="project.startTime" ng-disabled="project.state=='Approved'">
         </label>
         <label class="item item-input">
           <span class="input-label">End Time</span>
-          <input type="text" ng-model='project.endTime'>
+          <input type="text" ng-model='project.endTime' ng-disabled="project.state=='Approved'">
         </label>
         <br><br>
         <label class="item item-input">
@@ -21,7 +21,7 @@
           <div class="input-label">
             Customer
           </div>
-          <select ng-model='customerTitle' ng-change='setSelectedCustomer(customerTitle)' ng-options='customer.title for customer in customerList track by customer.title'>
+          <select ng-model='customerTitle' ng-disabled="project.state=='Approved'" ng-change='setSelectedCustomer(customerTitle)' ng-options='customer.title for customer in customerList track by customer.title'>
 <!--
             <option>99x</option>
             <option selected>Puzzlepart</option>
@@ -33,7 +33,7 @@
           <div class="input-label">
             Project
           </div>
-          <select ng-model='projectTitle' ng-change='setSelectedProject(projectTitle)' ng-options='project.title for project in filteredProjects track by project.title'>
+          <select ng-model='projectTitle' ng-disabled="project.state=='Approved'" ng-change='setSelectedProject(projectTitle)' ng-options='project.title for project in filteredProjects track by project.title'>
 <!--
             <option>Puzzlepart</option>
             <option selected>Assist 365</option>
@@ -44,9 +44,9 @@
         <br><br>
       </div>
       <div class="button-bar">
-        <button class="button button-icon button-dark button-clear"><i class="icon ion-ios-locked"></i></button>
-        <button class="button button-icon button-balanced button-clear"><i class="icon ion-ios-checkmark"></i></button>
-        <button class="button button-icon button-assertive button-clear"><i class="icon ion-ios-close"></i></button>
+        <button class="button button-icon button-dark button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-locked"></i></button>
+        <button class="button button-icon button-balanced button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-checkmark"></i></button>
+        <button class="button button-icon button-assertive button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-close"></i></button>
       </div>
     </ion-content>
 </ion-view>
