changed input to span in time element in project view

--- a/didMobile/www/didApp/projectProgress/projectProgress.html
+++ b/didMobile/www/didApp/projectProgress/projectProgress.html
@@ -4,11 +4,11 @@
         <br>
         <label class="item item-input">
           <span class="input-label">Start Time</span>
-        <input type="text" ng-model="project.startTime" ng-disabled="project.state=='Approved'">
+            <span>{{project.startTime}}</span>
         </label>
         <label class="item item-input">
           <span class="input-label">End Time</span>
-          <input type="text" ng-model='project.endTime' ng-disabled="project.state=='Approved'">
+            <span>{{project.endTime}}</span>
         </label>
         <br><br>
         <label class="item item-input">
