--- a/didMobile/www/index.html
+++ b/didMobile/www/index.html
@@ -31,6 +31,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/tabs.controller.js"></script>
   </head>
   <body ng-app="didApp">
 
