--- a/didMobile/www/didApp/projectProgress/projectProgress.html
+++ b/didMobile/www/didApp/projectProgress/projectProgress.html
@@ -13,7 +13,7 @@
         <br><br>
         <label class="item item-input">
           <span class="input-label">Duration</span>
-          <span>{{getDuration(project.startTime,project.endTime)}}</span>
+          <span>{{project.duration}}</span>
         </label>
         <br>
         <br>
@@ -43,7 +43,7 @@
         </label>
         <br><br>
       </div>
-      <div class="button-bar">
+      <div class="button-bar button-bar-bg">
         <button class="button button-icon button-dark button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-locked"></i></button>
         <button class="button button-icon button-balanced button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-checkmark"></i></button>
         <button class="button button-icon button-assertive button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-close"></i></button>
