--- a/didMobile/www/didApp/weekProgress/weekProgress.html
+++ b/didMobile/www/didApp/weekProgress/weekProgress.html
@@ -1,39 +1,49 @@
-<ion-view view-title="{{'Week ' + weekStartend.weekNumber}}" hide-back-button='true'>
+<ion-view view-title="{{'Week ' + weekCount}}" hide-back-button='true'>
 
-  <ion-nav-buttons side="right">
-    <button class="button button-clear" ng-click='addOneWeek()'>
-      <i class='icon ion-ios-plus-outline'></i>
-    </button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side="left">
-      <button class="button button-clear" ng-click='substractOneWeek()'>
-        <i class='icon ion-ios-minus-outline'></i>
-      </button>
-  </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+        <button class="button button-clear" ng-click='addOneWeek()'>
+            <i class='icon ion-ios-plus-outline'></i>
+        </button>
+    </ion-nav-buttons>
+    <ion-nav-buttons side="left">
+        <button class="button button-clear" ng-click='substractOneWeek()'>
+            <i class='icon ion-ios-minus-outline'></i>
+        </button>
+    </ion-nav-buttons>
 
     <ion-content>
-      <ion-refresher on-refresh='refreshData()'></ion-refresher>
-      <ion-list>
-        <ion-item ng-repeat='day in weeklyTimesheet'>
-          <div class="row">
-            <div class="col">{{day.date}}</div>
-            <div class="col">{{day.hours}} h</div>
-            <div class="col"><button class="button button-small button-clear" ui-sref='tab.dayProgress({selectedDate :day.dateFull})'>
-              <i class='icon icon-approved' ng-show={{day.state}}></i>
-              <i class='icon icon-suggested' ng-hide={{day.state}}></i>
-            </button></div>
-          </div>
-        </ion-item>
-      </ion-list>
-      <br>
-      <br>
-      <div class="padding">
-        <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'">
-          This is What I DID
-        </button>
-        <center>
-            <img ng-src="img/confirmed.png" alt="" ng-show="stateWeek=='Confirmed'">
-        </center>  
-      </div>
+        <ion-refresher on-refresh='refreshData()'></ion-refresher>
+        <ion-list>
+            <ion-item ng-repeat='day in weeklyTimesheet'>
+                <div class="row">
+                    <div class="col">{{day.date}}</div>
+                    <div class="col">{{day.hours}} h</div>
+                    <div class="col">
+                        <button class="button button-small button-clear" ui-sref='tab.dayProgress({selectedDate :day.dateFull})'>
+                            <i class='icon icon-approved' ng-show={{day.state}}></i>
+                            <i class='icon icon-suggested' ng-hide={{day.state}}></i>
+                        </button>
+                    </div>
+                </div>
+            </ion-item>
+        </ion-list>
+        <br>
+        <br>
+        <div class="padding">
+            <center>
+                <div class="button-bar">
+                    <button class="button button-clear"><span class="badge badge-balanced badge-status">{{summaryHours[0]}}h</span></button>
+                    <button class="button button-clear"><span class="badge badge-energized badge-status">{{summaryHours[1]}}h</span></button>
+                    <button class="button button-clear"><span class="badge badge-assertive badge-status">{{summaryHours[2]}}h</span></button>    
+                </div>
+            </center>
+            <br>
+            <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'">
+                This is What I DID
+            </button>
+            <center>
+                <img ng-src="img/confirmed.png" class="img-approved" alt="" ng-show="stateWeek=='Confirmed'">
+            </center>
+        </div>
     </ion-content>
 </ion-view>
