--- a/didMobile/www/didApp/weekProgress/weekProgress.html
+++ b/didMobile/www/didApp/weekProgress/weekProgress.html
@@ -38,7 +38,7 @@
                 </div>
             </center>
             <br>
-            <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'">
+            <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'" ng-click='showConfirm()'>
                 This is What I DID
             </button>
             <center>
