--- a/didMobile/www/index.html
+++ b/didMobile/www/index.html
@@ -27,7 +27,8 @@
     <script src="didApp/settings/setting.controller.js"></script>
     <script src="didApp/services/service.js"></script>
     <script src="didApp/services/dataStore.service.js"></script>
-
+    <script src="didApp/WhatIDid/successScreen.controller.js"></script>
+    <script src="didApp/WhatIDid/errorScreen.controller.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
