--- a/didMobile/www/didApp/projectProgress/projectProgress.html
+++ b/didMobile/www/didApp/projectProgress/projectProgress.html
@@ -35,8 +35,8 @@
       </div>
       <div class="button-bar button-bar-bg">
         <button class="button button-icon button-dark button-clear" ng-click="updateStatePrivate()" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-locked"></i></button>
-        <button class="button button-icon button-balanced button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-checkmark"></i></button>
-        <button class="button button-icon button-assertive button-clear" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-close"></i></button>
+        <button class="button button-icon button-balanced button-clear" ng-click="updateStatePrivate()" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-checkmark"></i></button>
+        <button class="button button-icon button-assertive button-clear" ng-click="updateStatePrivate()" ng-disabled="project.state=='Approved'"><i class="icon ion-ios-close"></i></button>
       </div>
     </ion-content>
 </ion-view>
