changed the tab view. Placed the logout at action sheet

--- a/didMobile/www/didApp/dayProgress/dayProgress.html
+++ b/didMobile/www/didApp/dayProgress/dayProgress.html
@@ -8,7 +8,7 @@
                 <span class="badge badge-balanced icon-badge" ng-show="entry.state=='Approved'||entry.state=='SystemConfirmed'||entry.state=='UserConfirmed'">{{entry.hours}}h</span>
                 <span class="badge badge-energized" ng-show="entry.state=='Suggested'||entry.state=='Imported'">{{entry.hours}}h</span>
                 <span class="badge badge-assertive" ng-show="entry.state=='UserIgnored'||entry.state=='SystemIgnored'">{{entry.hours}}h</span>
-                <button class="button button-clear" ui-sref='tab.projectProgress({selectedId : entry.id })'>
+                <button class="button button-clear" ui-sref='projectProgress({selectedId : entry.id })'>
                     <i class="icon icon-ignore" ng-show="entry.state=='UserIgnored'"></i>
                     <i class="icon icon-ignore" ng-show="entry.state=='SystemIgnored'"></i>
                     <i class="icon icon-edit" ng-show="entry.state=='Suggested'"></i>
