--- a/didMobile/www/index.html
+++ b/didMobile/www/index.html
@@ -29,6 +29,7 @@
     <script src="didApp/services/dataStore.service.js"></script>
     <script src="didApp/WhatIDid/successScreen.controller.js"></script>
     <script src="didApp/WhatIDid/errorScreen.controller.js"></script>
+    <script src="didApp/sidemenu/leftSideMenu.controller.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
