--- a/didMobile/www/didApp/WhatIDid/successScreen.html
+++ b/didMobile/www/didApp/WhatIDid/successScreen.html
@@ -1,17 +1,14 @@
 <ion-view view-title="Confirmed">
     <ion-content>
-       <center>
-           <img ng-src="img/success.png" class="success-image" alt="">
-       </center>
+      <br><br>
        <center>
            <p class="success-message">Your time sheet is</p>
            <p class="success-message">confirmed.</p>
            <p class="success-message">Go and have a brew.</p>
        </center> 
        <br><br>
-          
-       <center class="padding">
-            <button class="button button-block button-balanced" ui-sref="tab.weekProgress">Done</button>
-       </center>  
+        <center>
+        <img ng-src="img/success.png" class="success-image" ui-sref='weekProgress' alt="">
+       </center>
     </ion-content>
 </ion-view>
