Did the integration of data

--- a/Pzl.Did.Mobile.Client/www/index.html
+++ b/Pzl.Did.Mobile.Client/www/index.html
@@ -7,6 +7,9 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/spin.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+      type="text/css" rel="stylesheet" />
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -22,7 +25,7 @@
     <script src="didApp/login/login.controller.js"></script>
     <script src="didApp/login/login.service.js"></script>
     <script src="didApp/dayProgress/dayProgress.controller.js"></script>
-    <script src="didApp/projectProgress/projectProgress.controller.js"></script>
+    <script src="didApp/EntryProgress/EntryProgress.controller.js"></script>
     <script src="didApp/weekProgress/weekProgress.controller.js"></script>
     <script src="didApp/settings/setting.controller.js"></script>
     <script src="didApp/services/service.js"></script>
