fixed some bugs of project list

--- a/Pzl.Did.Mobile.Client/www/didApp/EntryProgress/EntryProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/EntryProgress/EntryProgress.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" button buttonCircle confirm" ng-click="updateStatePrivate()">
+                    <div class=" button buttonCircle confirm" ng-click="updateStateConfirm()">
                         <i class="icon icon-approved"></i>
                     </div>
                 </div>
