--- a/Pzl.Did.Mobile.Client/www/index.html
+++ b/Pzl.Did.Mobile.Client/www/index.html
@@ -26,6 +26,7 @@
     <script src="didApp/login/login.service.js"></script>
     <script src="didApp/dayProgress/dayProgress.controller.js"></script>
     <script src="didApp/EntryProgress/EntryProgress.controller.js"></script>
+    <script src="didApp/EntryProgress/EntryProgress.service.js"></script>
     <script src="didApp/weekProgress/weekProgress.controller.js"></script>
     <script src="didApp/settings/setting.controller.js"></script>
     <script src="didApp/services/service.js"></script>
