issues with combo

--- a/Pzl.Did.Mobile.Client/www/didApp/EntryProgress/EntryProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/EntryProgress/EntryProgress.html
@@ -39,7 +39,7 @@
             <div class="table">
             <div class="row">
                 <div class="col">
-                    <div class=" button buttonCircle private" ng-click="updateStatePrivate()">
+                    <div class=" button buttonCircle private" ng-click="privateEntry()">
                         <i class="icon icon-private"></i>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" button buttonCircle ignore" ng-click="updateStatePrivate()">
+                    <div class=" button buttonCircle ignore" ng-click="ignoreEntry()">
                         <i class="icon icon-ignore"></i>
                     </div>
                 </div>
