landing page after update

--- a/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
@@ -46,7 +46,7 @@
                </div>
             </center>
             <br>
-            <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'" ui-sref='confirmed'>
+            <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'" ng-click='ApproveWeek()'>
                 This is What I DID
             </button>
             <center class="padding">
