--- a/Pzl.Did.Mobile.Client/www/index.html
+++ b/Pzl.Did.Mobile.Client/www/index.html
@@ -28,12 +28,14 @@
     <script src="didApp/EntryProgress/EntryProgress.controller.js"></script>
     <script src="didApp/EntryProgress/EntryProgress.service.js"></script>
     <script src="didApp/weekProgress/weekProgress.controller.js"></script>
+    <script src="didApp/weekProgress/weekProgress.service.js"></script>
     <script src="didApp/settings/setting.controller.js"></script>
     <script src="didApp/services/service.js"></script>
     <script src="didApp/services/dataStore.service.js"></script>
     <script src="didApp/WhatIDid/successScreen.controller.js"></script>
     <script src="didApp/WhatIDid/errorScreen.controller.js"></script>
     <script src="didApp/sidemenu/leftSideMenu.controller.js"></script>
+    
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
