Changed header color Error pop ups

--- a/Pzl.Did.Mobile.Client/www/didApp/login/login.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/login/login.html
@@ -11,8 +11,8 @@
                   <input type="password" required placeholder="Password" ng-model='user.password'>
               </label>
               <br>
-              <button class="button button-block button-stable" ng-click='login(user)'>
-              Login
+              <button class="button button-block button-custom" ng-click='login(user)'>
+              <strong>Login</strong>
             </button>
           <p></p>
       </div>
