--- a/Pzl.Did.Mobile.Client/www/index.html
+++ b/Pzl.Did.Mobile.Client/www/index.html
@@ -43,7 +43,7 @@
   </head>
   <body ng-app="didApp">
 
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-custom">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
