--- a/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
@@ -13,8 +13,11 @@
         </button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-        <button class="button button-clear custom-color" ng-click='ExpressImport()'>
+        <button class="button button-clear custom-color" ng-hide="expressImportState" ng-click='ExpressImport()'>
             Express<br>Import
+        </button>
+        <button class="button button-clear custom-color" ng-show="expressImportState" ng-click=''>
+            Pending<br>Import
         </button>
     </ion-nav-buttons>
     <ion-content>
