--- a/Pzl.Did.Mobile.Client/www/index.html
+++ b/Pzl.Did.Mobile.Client/www/index.html
@@ -29,14 +29,15 @@
     <script src="didApp/EntryProgress/EntryProgress.service.js"></script>
     <script src="didApp/weekProgress/weekProgress.controller.js"></script>
     <script src="didApp/weekProgress/weekProgress.service.js"></script>
-    <script src="didApp/services/service.js"></script>
+    <script src="didApp/services/dataRetrivefromserver.service.js"></script>
     <script src="didApp/services/dataStore.service.js"></script>
+    <script src="didApp/services/dataLoad.service.js"></script>
     <script src="didApp/WhatIDid/successScreen.controller.js"></script>
     <script src="didApp/WhatIDid/errorScreen.controller.js"></script>
-  
+    <script src="didApp\DataLoad\dataLoadPage.controller.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/tabs.controller.js"></script>
   </head>
   <body ng-app="didApp">
 
