--- a/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
@@ -16,7 +16,7 @@
         <button class="button button-clear custom-color" ng-hide="expressImportState" ng-click='ExpressImport()'>
             Express<br>Import
         </button>
-        <button class="button button-clear custom-color" ng-show="expressImportState" ng-click=''>
+        <button class="button button-clear custom-color" ng-disabled='true' ng-show="expressImportState" ng-click=''>
             Pending<br>Import
         </button>
     </ion-nav-buttons>
@@ -44,12 +44,12 @@
                    <div class="col"><div class="numberCircle confirmed">{{summaryHours[0]}}h</div></div>
                    <div class="col"><div class="numberCircle unconfirmed">{{summaryHours[1]}}h</div></div>
                    <div class="col"><div class="numberCircle ignored">{{summaryHours[2]}}h</div></div>
-                  </div>  
+                  </div>
                   <div class="row">
                    <div class="col">Confirmed</div>
                    <div class="col">Unconfirmed</div>
                    <div class="col">Ignored</div>
-                  </div>               
+                  </div>
                </div>
             </center>
             <br>
